View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0029169 | Open CASCADE | OCCT:Configuration | public | 2017-09-30 19:46 | 2018-06-29 21:19 |
Reporter | kgv | Assigned To | bugmaster | ||
Priority | low | Severity | minor | ||
Status | closed | Resolution | fixed | ||
Product Version | 7.2.0 | ||||
Target Version | 7.3.0 | Fixed in Version | 7.3.0 | ||
Summary | 0029169: Configuration - fix compilation with undefined UNICODE on Windows | ||||
Description | OCCT is expected to be compiled with UNICODE macros on Windows, however in some cases it can be undefined leading to compilation errors. | ||||
Steps To Reproduce | 0. Install Code::Blocks with MinGW 1. Generate Code::Blocks project on Windows running "genproj cbp" 2. Start codeblocks.bat 3. Build TKernel | ||||
Tags | No tags attached. | ||||
Test case number | Not required | ||||
|
Branch CR29169 has been created by kgv. SHA-1: a783861e304be3bfe73bba36b2d89a89a6540944 Detailed log of new commits: Author: kgv Date: Sat Sep 30 19:52:10 2017 +0300 0029169: Configuration - fix compilation with undefined UNICODE on Windows Eliminated usage of TEXT macros, usage of OSVERSIONINFO instead of OSVERSIONINFOW. LoadIcon/LoadCursor are now used instead of LoadIconW/LoadCursorW when passing macros to standard resources (which depend on UNICODE flag). |
|
Patch is ready for review. |
|
Reviewed with no remarks |
|
Branch CR29169 has been updated forcibly by abv. SHA-1: d6b241ef46f85ac731a033c1cad43bd28f4b52a6 |
|
Branch CR29169 has been updated forcibly by abv. SHA-1: 2bd1ffe4423029fe3b0a6808e298ca37e60b8a68 |
|
Tested in framework of testing issue 29170 |
|
Branch CR29169 has been deleted by kgv. SHA-1: 2bd1ffe4423029fe3b0a6808e298ca37e60b8a68 |
occt: master c85a994a 2017-09-30 16:52:10 Committer: bugmaster Details Diff |
0029169: Configuration - fix compilation with undefined UNICODE on Windows Eliminated usage of TEXT macros, usage of OSVERSIONINFO instead of OSVERSIONINFOW. LoadIcon/LoadCursor are now used instead of LoadIconW/LoadCursorW when passing macros to standard resources (which depend on UNICODE flag). |
Affected Issues 0029169 |
|
mod - src/Draw/init.cxx | Diff File | ||
mod - src/OSD/OSD_Host.cxx | Diff File | ||
mod - src/ViewerTest/ViewerTest_ViewerCommands.cxx | Diff File | ||
mod - src/WNT/WNT_WClass.cxx | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2017-09-30 19:46 | kgv | New Issue | |
2017-09-30 19:46 | kgv | Assigned To | => kgv |
2017-09-30 19:52 | git | Note Added: 0071084 | |
2017-09-30 19:52 | kgv | Note Added: 0071085 | |
2017-09-30 19:52 | kgv | Assigned To | kgv => abv |
2017-09-30 19:52 | kgv | Priority | normal => low |
2017-09-30 19:52 | kgv | Status | new => resolved |
2017-09-30 19:53 | kgv | Relationship added | child of 0028110 |
2017-10-01 13:53 |
|
Note Added: 0071091 | |
2017-10-01 13:53 |
|
Status | resolved => reviewed |
2017-10-01 13:53 |
|
Steps to Reproduce Updated | |
2017-10-01 13:53 |
|
Target Version | 7.4.0 => 7.3.0 |
2017-10-01 21:13 | git | Note Added: 0071100 | |
2017-10-01 22:07 | git | Note Added: 0071103 | |
2017-10-03 09:42 | bugmaster | Note Added: 0071137 | |
2017-10-03 09:42 | bugmaster | Status | reviewed => tested |
2017-10-03 09:52 | bugmaster | Test case number | => Not required |
2017-10-06 14:55 | bugmaster | Changeset attached | => occt master c85a994a |
2017-10-06 14:55 | bugmaster | Assigned To | abv => bugmaster |
2017-10-06 14:55 | bugmaster | Status | tested => verified |
2017-10-06 14:55 | bugmaster | Resolution | open => fixed |
2017-10-14 12:20 | git | Note Added: 0071475 | |
2018-06-29 21:15 |
|
Fixed in Version | => 7.3.0 |
2018-06-29 21:19 |
|
Status | verified => closed |